Ajout => possiblité de like sur les films (like multiple par utilisateur ==bug)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,7 @@
   	<filter-name>ConnectionUser</filter-name>
   	<url-pattern>/movie/add</url-pattern>
   	<url-pattern>/people/add</url-pattern>
+  	<url-pattern>/like</url-pattern>
   </filter-mapping>
   
   <servlet>
