--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,17 @@
   	<url-pattern>/people/add</url-pattern>
   	<url-pattern>/like</url-pattern>
   </filter-mapping>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>CategoryServlet</display-name>
+  	<servlet-name>CategoryServlet</servlet-name>
+  	<servlet-class>fr.dawan.reseauSoc.category.CategoryServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>CategoryServlet</servlet-name>
+  	<url-pattern>/category</url-pattern>
+  </servlet-mapping>
 
  <!-- *************************WELCOME FILE******************************* -->
   <welcome-file-list>
