--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,17 +15,19 @@
   	<url-pattern>/movie/add</url-pattern>
   	<url-pattern>/people/add</url-pattern>
   	<url-pattern>/like</url-pattern>
+  	<url-pattern>/wall</url-pattern>
+  	<url-pattern>/shortcontent</url-pattern>
   </filter-mapping>
   <servlet>
   	<description>
   	</description>
-  	<display-name>CategoryServlet</display-name>
-  	<servlet-name>CategoryServlet</servlet-name>
-  	<servlet-class>fr.dawan.reseauSoc.category.CategoryServlet</servlet-class>
+  	<display-name>ViewUserServlet</display-name>
+  	<servlet-name>ViewUserServlet</servlet-name>
+  	<servlet-class>fr.dawan.reseauSoc.user.ViewUserServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>CategoryServlet</servlet-name>
-  	<url-pattern>/category</url-pattern>
+  	<servlet-name>ViewUserServlet</servlet-name>
+  	<url-pattern>/user</url-pattern>
   </servlet-mapping>
 
  <!-- *************************WELCOME FILE******************************* -->
