Ajout => date de modification de Likable

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
   	<url-pattern>/like</url-pattern>
   	<url-pattern>/wall</url-pattern>
   	<url-pattern>/shortcontent</url-pattern>
-  	<url-pattern>/comment/add</url-pattern>
+  	<url-pattern>/comment</url-pattern>
   </filter-mapping>
 
  <!-- *************************WELCOME FILE******************************* -->
