--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:jsp="http://java.sun.com/xml/ns/javaee/jsp" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
   <display-name>ReseauSocial</display-name>
+  
+ <!-- ********************FILTER CONNECTION USER*********************** -->
   <filter>
   	<description>
   	</description>
@@ -8,6 +10,8 @@
   	<filter-name>ConnectionUser</filter-name>
   	<filter-class>fr.dawan.reseauSoc.filter.ConnectionUser</filter-class>
   </filter>
+
+ <!-- ********************FILTER SEARCH FOLLOWER*********************** -->
   <filter>
   	<description>
   	</description>
@@ -15,6 +19,8 @@
   	<filter-name>FollowersFilter</filter-name>
   	<filter-class>fr.dawan.reseauSoc.filter.FollowersFilter</filter-class>
   </filter>
+  
+<!-- ********************FILTER NOMBRE MESSAGE************************ -->
   <filter>
   	<description>
   	</description>
@@ -43,24 +49,14 @@
   	<url-pattern>/movie</url-pattern>
   	<url-pattern>/user</url-pattern>
   	
+<!-- ********************MAPPING FILTER NOMBRE MESSAGE************** -->
   </filter-mapping>
   <filter-mapping>
   	<filter-name>NbrMessage</filter-name>
-  	<url-pattern>/NbrMessage</url-pattern>
+  	<url-pattern>/*</url-pattern>
   </filter-mapping>
-  <servlet>
-  	<description>
-  	</description>
-  	<display-name>MailBoxServlet</display-name>
-  	<servlet-name>MailBoxServlet</servlet-name>
-  	<servlet-class>fr.dawan.reseauSoc.message.MailBoxServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>MailBoxServlet</servlet-name>
-  	<url-pattern>/mailbox</url-pattern>
-  </servlet-mapping>
 
- <!-- ********************WELCOME FILE******************************* -->
+<!-- ********************WELCOME FILE******************************* -->
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
